@@ -102,6 +102,28 @@ in SparForte.</p>
       </td>
     </tr>
     <tr>
+      <td style="vertical-align: top;"><span>Dollar Quote (C)</span><br>
+      </td>
+      <td style="vertical-align: top;"><tt>$'foo\n'</tt><br>
+      </td>
+      <td style="vertical-align: top;"><tt>foo</tt>(new line)<br>
+      </td>
+
+      <td style="vertical-align: top;"><span>Not implemented</span><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><span>Dollar Double Quote (Locale)</span><br>
+      </td>
+      <td style="vertical-align: top;"><tt>$"foo"</tt><br>
+      </td>
+      <td style="vertical-align: top;"><tt>foo</tt><br>
+      </td>
+
+      <td style="vertical-align: top;"><span>Not implemented</span><br>
+      </td>
+    </tr>
+    <tr>
       <td style="vertical-align: top;"><span>Variable Expansion</span><br>
       </td>
       <td style="vertical-align: top;"><tt>$HOME/a.txt</tt><br>
@@ -543,6 +565,18 @@ t := " hello "; -- identifier of the type string<br>
       <td style="vertical-align: top;"><tt>-</tt><br>
       </td>
       <td style="vertical-align: top;"><span>OK</span><br>
+      </td>
+
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><span>Command Options</span><br>
+      </td>
+      <td style="vertical-align: top;"><tt>$-</tt><br>
+
+      </td>
+      <td style="vertical-align: top;"><tt>-</tt><br>
+      </td>
+      <td style="vertical-align: top;"><span>Not Implemented</span><br>
       </td>
 
     </tr>
